2005-06-23  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add ARGB text to 1.0 roadmap.

2005-05-17  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-png.c (write_png): Only unpremultiply ARGB32 data, 
	do a simpler conversion for RGB24 data (fixes #2297)
	Call png_write_info() *before* we set up the write conversion...
	it doesn't work after.

2005-06-23  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add workaround for Render's overlapping source/dest bug
	to the 0.5.2 roadmap.

2005-06-22  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Update ROADMAP with some comments on 0.5.2.
	Add link to BadMatch bug.

	* src/cairo.c: Add documentation for cairo_set_source_surface and
	fix some typos in other documentation blocks.

2005-06-22  Øyvind Kolås  <pippin@freedesktop.org>

	* doc/public/language-bindings.xml: spelling and whitespace fix.

2005-06-21  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-pdf-surface.c: Split out font subsetting code from here,

	* src/cairo-font-subset-private.h: 
	* src/cairo-font-subset.c: and put it here.
	
2005-06-21  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c: allow building against < 10.3 SDK.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to CAIRO_VERSION after tagging with
	SNAPSHOT_0_5_1.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* Makefile.am: Force distcheck to enable gtk-doc.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for snapshot 0.5.1

	* configure.in: Increment CAIRO_VERSION to 0.5.1

2005-06-20  Owen Taylor  <otaylor@redhat.com>

	Workaround for https://bugs.freedesktop.org/show_bug.cgi?id=3566

	* src/cairo-xlib-surface.c: Detect servers with a bug in 
	repeating surfaces by checking vendor string and version.

	* src/cairo-xlib-surface.c: For such surfaces either fall back to
	an implementation with the core protocol or fall back to the image
	backend.

	* src/cairo-xlib-surface.c: Save clip rects when setting a